# skju

./: .gitignore  Cargo.toml  docker-compose.yml  otel-collector-config.yaml  rustfmt.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml  tests.yml
defmt_cs/: .dockerignore  Cargo.toml  Dockerfile  Makefile  uniffi-bindgen-cs.toml
defmt_cs/scripts/: DefmtPlugin.cs
defmt_cs/src/: lib.rs
flux/: .gitignore  Cargo.toml  build.rs  compose.yml
flux/db/: init-db.sh
flux/src/: dtos.rs  events.proto  events.rs  main.rs  models.rs  pods.rs
ios/: Makefile  Package.swift
ios/Sources/SkjuIOS/: Info.plist  Main.swift  SensorRemoteStore.swift  SimDataStore.swift
k8s/: namespace.yaml
k8s/app/: deployment.yaml  network-policy.yaml  otel-collector-config.yaml
mobile/common/: Cargo.toml  Makefile  rust-toolchain.toml  uniffi.toml
mobile/common/src/: lib.rs
mobile/simulator/: Makefile  Package.swift
mobile/simulator/Sources/SkjuSimulator/: Main.swift  SensorRemoteStore.swift
mobile/simulator/src/SkjuSimulator/: Main.swift  SensorRemoteStore.swift  SimDataStore.swift
mpu6500/: Cargo.toml
mpu6500/src/: accel.rs  builder.rs  bus.rs  config.rs  lib.rs  mpu6500.rs  registers.rs  timer.rs  user_control.rs  utils.rs
renode_orchestration/: Dockerfile.renode  Makefile  orchestration.resc
renode_orchestration/scripts/gateway/: nrf9161dk.repl  nrf9161dk.resc
renode_orchestration/scripts/sensor/: mpu6500.repl  nrf52840.repl  nrf52840dk.repl  nrf52840dk.resc
skju_core/: Cargo.toml
skju_core/src/: consts.rs  lib.rs
skju_core/src/common/: mod.rs
skju_peripherals/: Cargo.toml
skju_peripherals/src/: lib.rs
skju_peripherals/src/bus/: mod.rs
skju_peripherals/src/peripherals/: mod.rs  mpu6500.rs
skju_peripherals/src/peripherals/mpu6500/: accel.rs  builder.rs  config.rs  fifo.rs  gyro.rs  interrupts.rs  mod.rs  mpu6500.rs  power_management.rs  registers.rs  user_control.rs  utils.rs
skju_server/: .env  Cargo.toml
skju_server/migrations/: 20251210185718_create_sensors_table.sql  20251211173019_create_readings_table.sql
skju_server/src/: app.rs  config.rs  error.rs  main.rs  routes.rs  state.rs
skju_server/src/api/readings/: dto.rs  handlers.rs  mod.rs  routes.rs
skju_server/src/api/sensors/: dto.rs  handlers.rs  routes.rs
skju_server/src/application/: mod.rs
skju_server/src/application/messages/: consumer.rs  message.rs  mod.rs
skju_server/src/application/readings/: mod.rs  readings_buffer.rs  service.rs  service_impl.rs
skju_server/src/application/sensors/: mod.rs  service.rs  service_impl.rs
skju_server/src/domain/: mod.rs  point.rs  reading.rs  sensor.rs
skju_server/src/features/: mod.rs
skju_server/src/features/health_check/: handlers.rs  routes.rs
skju_server/src/features/readings/: handlers.rs  routes.rs
skju_server/src/features/sensors/: handlers.rs  mod.rs  routes.rs  service.rs
skju_server/src/infrastructure/: mod.rs
skju_server/src/infrastructure/bus/: app_bus.rs  mod.rs
skju_server/src/infrastructure/db/: mod.rs  pg_reading_repository.rs  pg_sensor_repository.rs
skju_server/src/ports/: bus_service.rs  mod.rs  reading_repository.rs  readings_repository.rs  sensors_repository.rs
skju_sgw/: Cargo.toml  Makefile  README.md  build.rs  deny.toml  memory.ld  rust-toolchain.toml  rustfmt.toml
skju_sgw/.cargo/: config.toml
skju_sgw/scripts/: nrf9161dk.repl  nrf9161dk.resc
skju_sgw/src/: main.rs
skju_sn/: Cargo.toml  Dockerfile.renode  Makefile  README.md  deny.toml  gdb-commands.gdb  memory.ld  rust-toolchain.toml
skju_sn/.cargo/: config.toml
skju_sn/scripts/: DefmtPlugin.cs  Mpu6500.cs  mpu6500.repl  mpu6500_mock.py  nrf52840.repl  nrf52840dk.repl  nrf52840dk.resc  nrf52840dk_create.resc
skju_sn/src/: ble.rs  constants.rs  main.rs  spi.rs  timer.rs  utils.rs
skju_sn/src/skju_peripherals/: mod.rs  mpu6500.rs
skju_sn/src/skju_spi/: mod.rs
