[workspace]
members = ["skju", "skju_emulator", "skju_core", "skju_server"]
exclude = ["skju_sgw"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
async-trait = "0.1"
dotenvy = "0.15"