[package]
name = "skju_flux"
version = "0.1.0"
edition = "2024"
authors = ["zolkko@gmail.com"]

[dependencies]
anyhow = { workspace = true }
clickhouse = "0.14.2"
dotenvy = "0.15.7"
krafka = "0.2.0"
mqtt-protocol-core = "0.7.7"
opentelemetry = "0.31.0"
opentelemetry-instrumentation-tokio = "0.1.2"
opentelemetry_sdk = "0.31.0"
prost = "0.14.3"
prost-types = "0.14.3"
rama = { version = "0.2.0", features = ["tcp", "telemetry"] }
serde = { workspace = true }
tokio = { version = "1.50.0", features = [ "full" ] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[build-dependencies]
prost-build = "0.14.3"

#[dev-dependecies]
#tokio-netem = "0.1.1"
