[package]
name = "skju_server"
version = "0.1.0"
edition = "2024"

[dependencies]
skju_core = { path = "../skju_core" }
axum = { version = "0.8.7", features = ["macros"] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }