[package]
name = "skju_server"
version = "0.1.0"
edition = "2024"

[dependencies]
skju_core = { path = "../skju_core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
dotenvy = { workspace = true }
axum = { version = "0.8.7", features = ["macros"] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros", "chrono"] }