[package]
name = "skju_server"
version = "0.1.0"
edition = "2024"

[dependencies]
skju_core = { path = "../skju_core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
dotenvy = { workspace = true }
axum = { version = "0.8.7", features = ["macros"] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros", "chrono"] }

opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0" }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry-appender-tracing = { version = "0.31.0" }
tracing = "0.1.44"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

byteorder = "1.5.0"

[dev-dependencies]
testcontainers = "0.27.0"
