[package]
name = "skju_sgw"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"

embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.9.0", features = ["defmt", "nrf9160-s", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }

embassy-net = { version = "0.7.1", features = ["defmt", "tcp", "proto-ipv4", "medium-ip"] }
embassy-net-nrf91 = { version = "0.1.0", features = ["defmt"] }
# embassy-net-driver = "0.2.0"
# embassy-sync = "0.7.2"
# nrf-modem = { version = "0.9.2", features = ["nrf9161"] }

heapless = "0.9.2"
static_cell = { version = "2.1.1" }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = "symbols"

[features]
default = []

[package.metadata.skju_sgw]
build = [
    { target = "thumbv8m.main-none-eabihf" }
]