[package]
name = "skju_sn"
version = "0.1.0"
edition = "2024"

[features]
default = ["rtt"]
rtt = ["dep:defmt-rtt"]
#semihosting = ["dep:defmt-semihosting"]

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1"
defmt-rtt = { version = "1", optional = true }
#defmt-semihosting = { version = "0.3.0", optional = true }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.9.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }

heapless = "0.9.2"
static_cell = { version = "2.1.1" }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = "symbols"
panic = "abort"

[package.metadata.skju_sn]
build = [
    { target = "thumbv7em-none-eabihf" }
]